--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,46 @@
 <html>
   <body>
-    <h1>Hey Did this work?</h1>
+    <head>
+    <title>Spooky Castle</title>
+    <meta charset = "utf-8">
+    <meta name="description" content="Visit the Spooky Castle">
+    <meta property="og:image" content="/emilycarrot.jpg">
+  </head>
+
+  <body>
+    <h1>Welcome to the Spooky Castle!</h1>
+    <p>
+      Visit the different rooms below to meet all the spooky residents:
+    </p>
+    <nav>
+      <table>
+    <table border="1" style="font-family: arial; border-collapse: collapse">
+      <thead>
+        <tr>
+          <th colspan="2" style="font-family: cursive; font-style: strong; background-color: B84DFF">
+            <h2>Spooky Castle Rooms</h2>
+          </th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <a href = "/room1.html"><img src = "spookydoor.jpg" alt = Room 1 /></a>
+          </td>
+          <td>
+            <a href = "/room2.html"><img src = "spookydoor3.jpg" alt = Room 2 /></a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a href = "/room3.html"><img src = "spookydoor4.jpg" alt = Room 3 /></a>
+          </td>
+          <td>
+            <a href = "/room4.html"><img src = "spookydoor2.jpg" alt = Room 4 /></a>
+          </td>
+        </tr>
+      </tbody>
+      </table>
+    </nav>
 
   </body>
 </html>
