added pictures and descriptions to all rooms in the spooky castle

--- a/views/room1.erb
+++ b/views/room1.erb
@@ -1,5 +1,21 @@
 <html>
+  <head>
+    <title>Room 1 in the Spooky Castle</title>
+    <meta charset = "utf-8">
+    <meta name="description" content="Room 1 in the spooky castle is full of cats">
+    <meta property="og:image" content="/cats.png">
+  </head>
   <body>
-    <h1>This is Room 1</h1>
+    <h1>Room 1</h1>
+    <img src = "cats.png" alt = "spooky cats" />
+    <p>
+      This room is full of spooky cats. Meow meow meow meow meow!
+    </p>
+    <br>
+    <footer>
+      <a href = "/room2.html">Go to the next room</a>
+      <br>
+      <a href = "/">Back to the Spooky Castle</a>
+    </footer>
   </body>
 </html>
