--- a/views/room2.erb
+++ b/views/room2.erb
@@ -1,5 +1,22 @@
 <html>
+  <head>
+    <title>Room 2 in the Spooky Castle</title>
+    <meta charset = "utf-8">
+    <meta name="description" content="Room 2 in the spooky castle has 2 spooky owls">
+    <meta property="og:image" content="/owl1.jpg">
+  </head>
   <body>
-    <h1>This is Room 2</h1>
+    <h1>Room 2</h1>
+    <img src = "owl1.jpg" alt = "spooky owl" />
+    <img src = "owl2.jpg" alt = "another spooky owl" />
+    <p>
+      This room is full of spooky owls. Hoot!
+    </p>
+    <br>
+    <footer>
+      <a href = "/room3.html">Go to the next room</a>
+      <br>
+      <a href = "/">Back to the Spooky Castle</a>
+    </footer>
   </body>
 </html>
