--- a/views/room4.erb
+++ b/views/room4.erb
@@ -1,5 +1,21 @@
 <html>
+  <head>
+    <title>Room 4 in the Spooky Castle</title>
+    <meta charset = "utf-8">
+    <meta name="description" content="Room 4 in the spooky castle has a pumpkin">
+    <meta property="og:image" content="/pumpkins.jpg">
+  </head>
   <body>
-    <h1>This is Room 4</h1>
+    <h1>Room 4</h1>
+    <img src = "pumpkins.jpg" alt = "spooky pumpkin" />
+    <p>
+      Here is a spooky pumpkin.
+    </p>
+    <br>
+    <footer>
+      <a href = "/room1.html">Go to the next room</a>
+      <br>
+      <a href = "/">Back to the Spooky Castle</a>
+    </footer>
   </body>
 </html>
