--- a/views/room3.erb
+++ b/views/room3.erb
@@ -1,5 +1,21 @@
 <html>
+  <head>
+    <title>Room 3 in the Spooky Castle</title>
+    <meta charset = "utf-8">
+    <meta name="description" content="Room 3 in the spooky castle has spooky monster">
+    <meta property="og:image" content="/monster.jpg">
+  </head>
   <body>
-    <h1>This is Room 3</h1>
+    <h1>Room 3</h1>
+    <img src = "monster.png" alt = "spooky monster" />
+    <p>
+      This monster lives here.
+    </p>
+    <br>
+    <footer>
+      <a href = "/room4.html">Go to the next room</a>
+      <br>
+      <a href = "/">Back to the Spooky Castle</a>
+    </footer>
   </body>
 </html>
