added in pages from website from yesterday

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,44 +1,26 @@
 <html>
   <head>
-    <title>Spooky Castle</title>
+    <title>Emily's Website</title>
     <meta charset = "utf-8">
-    <meta name="description" content="Visit the Spooky Castle">
+    <meta name="description" content="This is Emily's website">
+    <meta property="og:image" content="/emilycarrot.jpg">
   </head>
 
   <body>
-    <h1>Welcome to the Spooky Castle!</h1>
+    <h1>Welcome to Emily's Website</h1>
     <p>
-      Visit the different rooms below to meet all the spooky residents:
+      Here are the different pages you can visit:
     </p>
     <nav>
-      <table>
-    <table border="1" style="font-family: arial; border-collapse: collapse">
-      <thead>
-        <tr>
-          <th colspan="2" style="font-family: cursive; font-style: strong; background-color: B84DFF">
-            <h2>Spooky Castle Rooms</h2>
-          </th>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <a href = "/room1.html"><img src = "spookydoor.jpg" alt = Room 1 /></a>
-          </td>
-          <td>
-            <a href = "/room2.html"><img src = "spookydoor3.jpg" alt = Room 2 /></a>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <a href = "/room3.html"><img src = "spookydoor4.jpg" alt = Room 3 /></a>
-          </td>
-          <td>
-            <a href = "/room4.html"><img src = "spookydoor2.jpg" alt = Room 4 /></a>
-          </td>
-        </tr>
-      </tbody>
-      </table>
+      <ul style="list-style-type:circle">
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="spookycastle.html">Spooky Castle</a></li>
+      </ul>
     </nav>
+
+    <img src = "https://scontent-sea1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/1928282_537480826955_4950_n.jpg?oh=f23ae62922ef2b94564e3a318ed554cb&oe=56D25018" />
 
   </body>
 </html>
