--- a/views/room1.erb
+++ b/views/room1.erb
@@ -6,16 +6,20 @@
     <meta property="og:image" content="/cats.png">
   </head>
   <body>
-    <h1>Room 1</h1>
-    <img src = "cats.png" alt = "spooky cats" />
-    <p>
-      This room is full of spooky cats. Meow meow meow meow meow!
-    </p>
-    <br>
+    <header>
+      <h1>Room 1</h1>
+    </header>
+    <article>
+      <img src = "cats.png" alt = "spooky cats" />
+      <p>
+        This room is full of spooky cats. Meow meow meow meow meow!
+      </p>
+      <br>
+    </article>
     <footer>
       <a href = "/room2.html">Go to the next room</a>
       <br>
-      <a href = "/">Back to the Spooky Castle</a>
+      <a href = "/spookycastle.html">Back to the Spooky Castle</a>
     </footer>
   </body>
 </html>
