--- a/views/room2.erb
+++ b/views/room2.erb
@@ -6,17 +6,21 @@
     <meta property="og:image" content="/owl1.jpg">
   </head>
   <body>
-    <h1>Room 2</h1>
-    <img src = "owl1.jpg" alt = "spooky owl" />
-    <img src = "owl2.jpg" alt = "another spooky owl" />
-    <p>
-      This room is full of spooky owls. Hoot!
-    </p>
+    <header>
+      <h1>Room 2</h1>
+    </header>
+    <article>
+      <img src = "owl1.jpg" alt = "spooky owl" />
+      <img src = "owl2.jpg" alt = "another spooky owl" />
+      <p>
+        This room is full of spooky owls. Hoot!
+      </p>
+    </article>
     <br>
     <footer>
       <a href = "/room3.html">Go to the next room</a>
       <br>
-      <a href = "/">Back to the Spooky Castle</a>
+      <a href = "/spookycastle.html">Back to the Spooky Castle</a>
     </footer>
   </body>
 </html>
