--- a/views/room4.erb
+++ b/views/room4.erb
@@ -6,16 +6,20 @@
     <meta property="og:image" content="/pumpkins.jpg">
   </head>
   <body>
-    <h1>Room 4</h1>
-    <img src = "pumpkins.jpg" alt = "spooky pumpkin" />
-    <p>
-      Here is a spooky pumpkin.
-    </p>
+    <header>
+      <h1>Room 4</h1>
+    </header>
+    <article>
+      <img src = "pumpkins.jpg" alt = "spooky pumpkin" />
+      <p>
+        Here is a spooky pumpkin.
+      </p>
+    </article>
     <br>
     <footer>
       <a href = "/room1.html">Go to the next room</a>
       <br>
-      <a href = "/">Back to the Spooky Castle</a>
+      <a href = "/spookycastle.html">Back to the Spooky Castle</a>
     </footer>
   </body>
 </html>
