--- a/views/room3.erb
+++ b/views/room3.erb
@@ -6,16 +6,20 @@
     <meta property="og:image" content="/monster.jpg">
   </head>
   <body>
-    <h1>Room 3</h1>
-    <img src = "monster.png" alt = "spooky monster" />
-    <p>
-      This monster lives here.
-    </p>
+    <header>
+      <h1>Room 3</h1>
+    </header>
+    <article>
+      <img src = "monster.png" alt = "spooky monster" />
+      <p>
+        Watch out! This hungry monster lives here.
+      </p>
+    </article>
     <br>
     <footer>
       <a href = "/room4.html">Go to the next room</a>
       <br>
-      <a href = "/">Back to the Spooky Castle</a>
+      <a href = "/spookycastle.html">Back to the Spooky Castle</a>
     </footer>
   </body>
 </html>
