Added css styling to the main pages, still working on spooky castle

--- a/views/about.erb
+++ b/views/about.erb
@@ -4,15 +4,16 @@
       <meta charset = "utf-8">
       <meta name="description" content="This page tells a little about the author of this website, Emily Gordon">
       <meta property="og:image" content="/emilycarrot.jpg">
+      <link href="css/main.css" rel="stylesheet">
     </head>
 
     <body>
       <header>
         <h1>About Me</h1>
-        <img src="./emilycarrot.jpg" alt = "Emily"/>
       </header>
 
-      <article>
+      <article class="navigation_back">
+        <img src="./emilycarrot.jpg" alt = "Emily"/>
         <p>
           Welcome! Since you are visiting my website I thought you might
           like to know a little bit about me.
@@ -24,13 +25,13 @@
         <p>
           I grew up in the Boston area, and currently live in Seattle, WA. I love to garden, and currently
         have a <a href="http://www.seattle.gov/neighborhoods/p-patch-community-gardening/about-the-p-patch-program">P-patch</a> community garden up at North Seattle Community College. Here are some of my favorite things to grow:
-          <div style="color:#29A329">
+        </p>
             <ul>
               <li>Tomato</li>
               <li>Kale</li>
               <li>Squash</li>
             </ul>
-          </div>
+        <p>
         I also love to cook and eat delicious food with friends, and explore new places in the beautiful Pacific Northwest.
         </p>
 
