--- a/views/blog.erb
+++ b/views/blog.erb
@@ -4,15 +4,16 @@
     <meta charset="utf-8">
     <meta name="description" content="Follow my journey learning HTML">
     <meta property="og:image" content="/emilycarrot.jpg">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Blog</h1>
-      <h3>Some thoughts about learning HTML</h3>
-      <p><em>October, 25 2015</em></p>
     </header>
 
-    <article>
+    <article class="navigation_back">
+      <h3>Some thoughts about learning HTML</h3>
+      <p><em>October, 25 2015</em></p>
       <p>
         This is not my first time writing a website in HTML, although it has been quite
         a long time. I first started learning html more than 15 years
