--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="description" content="This is Emily's website">
     <meta property="og:image" content="/emilycarrot.jpg">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body>
     <h1>Welcome to Emily's Website</h1>
+    <div class="navigation_back">
     <p>
       Here are the different pages you can visit:
     </p>
@@ -21,6 +23,6 @@
     </nav>
 
     <img src="https://scontent-sea1-1.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/1928282_537480826955_4950_n.jpg?oh=f23ae62922ef2b94564e3a318ed554cb&oe=56D25018" />
-
+  </div>
   </body>
 </html>
