--- a/views/projects.erb
+++ b/views/projects.erb
@@ -4,21 +4,22 @@
     <meta charset="utf-8">
     <meta name="description" content="Learn more about all the projects that Emily is working on.">
     <meta property="og:image" content="/emilycarrot.jpg">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Projects</h1>
+
+    </header>
+
+    <article class="navigation_back">
       <p>
         Here are all of my projects so far as a student with Ada Developers Academy. I can't believe it has been only a month and already I have accomplished so much!
       </p>
-    </header>
-
-    <article>
-      <table>
-    <table border="1" style="font-family: arial; border-collapse: collapse">
+    <table>
       <thead>
         <tr>
-          <th colspan="2" style="font-family: cursive; font-style: strong; background-color: B84DFF">
+          <th colspan="2">
             <h2>Ruby Programming Projects</h2>
           </th>
         </tr>
