--- a/views/spookycastle.erb
+++ b/views/spookycastle.erb
@@ -3,6 +3,7 @@
     <title>Spooky Castle</title>
     <meta charset = "utf-8">
     <meta name="description" content="Visit the Spooky Castle">
+    <link href="css/spooky.css" rel="stylesheet">
   </head>
 
   <body>
