--- a/views/room1.erb
+++ b/views/room1.erb
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="description" content="Room 1 in the spooky castle is full of cats">
     <meta property="og:image" content="/cats.png">
+    <link href="css/spooky.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Room 1</h1>
     </header>
     <article>
-      <img src="cats.png" alt="spooky cats" />
+      <img class="center" src="cats.png" alt="spooky cats" />
       <p>
         This room is full of spooky cats. Meow meow meow meow meow!
       </p>
