--- a/views/room3.erb
+++ b/views/room3.erb
@@ -4,13 +4,14 @@
     <meta charset = "utf-8">
     <meta name="description" content="Room 3 in the spooky castle has spooky monster">
     <meta property="og:image" content="/monster.jpg">
+    <link href="css/spooky.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Room 3</h1>
     </header>
     <article>
-      <img src="monster.png" alt="spooky monster" />
+      <img class="center" src="monster.png" alt="spooky monster" />
       <p>
         Watch out! This hungry monster lives here.
       </p>
