--- a/views/spookycastle.erb
+++ b/views/spookycastle.erb
@@ -11,38 +11,16 @@
       <h1>Welcome to the Spooky Castle!</h1>
     </header>
     <article>
-      <img src="spookycastle.png" alt="Spooky Castle" />
+      <img class="center" src="spookycastle.png" alt="Spooky Castle" />
       <p>
         Visit the different rooms below to meet all the spooky residents:
       </p>
       <nav>
-        <table>
-      <table border="1" style="font-family: arial; border-collapse: collapse">
-        <thead>
-          <tr>
-            <th colspan="2" style="font-family: cursive; font-style: strong; background-color: ff6600">
-              <h2>Spooky Castle Rooms</h2>
-            </th>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <a href="/room1.html"><img src="spookydoor.jpg" alt=Room 1 /></a>
-            </td>
-            <td>
-              <a href="/room2.html"><img src="spookydoor3.jpg" alt=Room 2 /></a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="/room3.html"><img src="spookydoor4.jpg" alt=Room 3 /></a>
-            </td>
-            <td>
-              <a href="/room4.html"><img src="spookydoor2.jpg" alt=Room 4 /></a>
-            </td>
-          </tr>
-        </tbody>
-        </table>
+        <a id="door1" href="/room1.html"><img src="spookydoor.jpg" alt=Room 1 /></a>
+        <a id="door2" href="/room2.html"><img src="spookydoor3.jpg" alt=Room 2 /></a>
+        <a id="door3" href="/room3.html"><img src="spookydoor4.jpg" alt=Room 3 /></a>
+        <a id="door4" href="/room4.html"><img src="spookydoor2.jpg" alt=Room 4 /></a>
+
       </nav>
     </article>
     <footer>
