--- a/views/room2.erb
+++ b/views/room2.erb
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="description" content="Room 2 in the spooky castle has 2 spooky owls">
     <meta property="og:image" content="/owl1.jpg">
+    <link href="css/spooky.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Room 2</h1>
     </header>
     <article>
-      <img src="owl1.jpg" alt="spooky owl" />
-      <img src="owl2.jpg" alt="another spooky owl" />
+      <img class="center" src="owl1.jpg" alt="spooky owl" />
+      <img class="center" src="owl2.jpg" alt="another spooky owl" />
       <p>
         This room is full of spooky owls. Hoot!
       </p>
