--- a/views/room4.erb
+++ b/views/room4.erb
@@ -4,15 +4,18 @@
     <meta charset = "utf-8">
     <meta name="description" content="Room 4 in the spooky castle has a pumpkin">
     <meta property="og:image" content="/pumpkins.jpg">
+    <link href="css/spooky.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Room 4</h1>
     </header>
     <article>
-      <img src="pumpkins.jpg" alt="spooky pumpkin" />
+      <% rand(2..10).times do %>
+      <img class="center" src="pumpkins.jpg" alt="spooky pumpkin" />
+      <% end %>
       <p>
-        Here is a spooky pumpkin.
+        Here are spooky pumpkins.
       </p>
     </article>
     <br>
