--- a/views/room4.erb
+++ b/views/room4.erb
@@ -1,28 +1,7 @@
-<html>
-  <head>
-    <title>Room 4 in the Spooky Castle</title>
-    <meta charset = "utf-8">
-    <meta name="description" content="Room 4 in the spooky castle has a pumpkin">
-    <meta property="og:image" content="/pumpkins.jpg">
-    <link href="css/spooky.css" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <h1>Room 4</h1>
-    </header>
-    <article>
-      <% rand(2..10).times do %>
+
+      <% @pumpkins.times do %>
       <img class="center" src="pumpkins.jpg" alt="spooky pumpkin" />
       <% end %>
       <p>
         Here are spooky pumpkins.
       </p>
-    </article>
-    <br>
-    <footer>
-      <a href="/room1.html">Go to the next room</a>
-      <br>
-      <a href="/spookycastle.html">Back to the Spooky Castle</a>
-    </footer>
-  </body>
-</html>
