--- a/views/room1.erb
+++ b/views/room1.erb
@@ -1,4 +1,4 @@
-  <img class="center" src="cats.png" alt="spooky cats" />
-      <p>
-        This room is full of spooky cats. Meow meow meow meow meow!
-      </p>
+<img src="cats.png" alt="spooky cats" />
+<p>
+  This room is full of spooky cats. Meow meow meow meow meow!
+</p>
