--- a/views/room2.erb
+++ b/views/room2.erb
@@ -1,6 +1,5 @@
-
-      <img class="center" src="owl1.jpg" alt="spooky owl" />
-      <img class="center" src="owl2.jpg" alt="another spooky owl" />
-      <p>
-        This room is full of spooky owls. Hoot!
-      </p>
+<img src="owl1.jpg" alt="spooky owl" />
+<img src="owl2.jpg" alt="another spooky owl" />
+<p>
+  This room is full of spooky owls. Hoot!
+</p>
