--- a/views/room4.erb
+++ b/views/room4.erb
@@ -1,7 +1,6 @@
-
-      <% @pumpkins.times do %>
-      <img class="center" src="pumpkins.jpg" alt="spooky pumpkin" />
-      <% end %>
-      <p>
-        Here are spooky pumpkins.
-      </p>
+<% @pumpkins.times do %>
+  <img class="center" src="pumpkins.jpg" alt="spooky pumpkin" />
+<% end %>
+<p>
+  Here are <%= @pumpkins %> spooky pumpkins.
+</p>
