--- a/views/room2.erb
+++ b/views/room2.erb
@@ -1,5 +1,5 @@
-<img src="owl1.jpg" alt="spooky owl" />
-<img src="owl2.jpg" alt="another spooky owl" />
+<img src="owl1.png" alt="spooky owl" />
+<img src="owl2.png" alt="another spooky owl" />
 <p>
   This room is full of spooky owls. Hoot!
 </p>
