--- a/views/room4.erb
+++ b/views/room4.erb
@@ -1,5 +1,5 @@
 <% @pumpkins.times do %>
-  <img class="center" src="pumpkins.jpg" alt="spooky pumpkin" />
+  <img class="center" src="pumpkins.png" alt="spooky pumpkin" />
 <% end %>
 <p>
   Here are <%= @pumpkins %> spooky pumpkins.
