--- a/views/room1.erb
+++ b/views/room1.erb
@@ -1,4 +1,6 @@
-<img src="cats.png" alt="spooky cats" />
+<img src="cat1.png" alt="spooky cats" />
+<img src="cat2.png" alt="spooky cats" />
+<img src="cat3.png" alt="spooky cats" />
 <p>
   This room is full of spooky cats. Meow meow meow meow meow!
 </p>
