added white shadow box to clean up whit static around images

--- a/views/room1.erb
+++ b/views/room1.erb
@@ -1,6 +1,8 @@
-<img src="cat1.png" alt="spooky cats" />
-<img src="cat2.png" alt="spooky cats" />
-<img src="cat3.png" alt="spooky cats" />
+<div class="shadow">
+  <img src="cat1.png" alt="spooky cat" />
+  <img src="cat2.png" alt="spooky cat" />
+  <img src="cat3.png" alt="spooky cat" />
+</div>
 <p>
   This room is full of spooky cats. Meow meow meow meow meow!
 </p>
