--- a/views/room2.erb
+++ b/views/room2.erb
@@ -1,5 +1,7 @@
-<img src="owl1.png" alt="spooky owl" />
-<img src="owl2.png" alt="another spooky owl" />
+<div class="shadow">
+  <img src="owl1.png" alt="spooky owl" />
+  <img src="owl2.png" alt="another spooky owl" />
+</div>
 <p>
   This room is full of spooky owls. Hoot!
 </p>
