--- a/views/room4.erb
+++ b/views/room4.erb
@@ -1,6 +1,8 @@
-<% @pumpkins.times do %>
-  <img class="center" src="pumpkins.png" alt="spooky pumpkin" />
-<% end %>
+<div class="shadow">
+  <% @pumpkins.times do %>
+    <img class="center" src="pumpkins.png" alt="spooky pumpkin" />
+  <% end %>
+</div>
 <p>
   Here are <%= @pumpkins %> spooky pumpkins.
 </p>
