--- a/views/room3.erb
+++ b/views/room3.erb
@@ -1,4 +1,6 @@
-<img class="center" src="monster.png" alt="spooky monster" />
+<div class="shadow">
+  <img class="center" src="monster.png" alt="spooky monster" />
+</div>
 <p>
   Watch out! This hungry monster lives here.
 </p>
